<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue2"
    tools:context="dozkaz.bib.de.myandroidlotto.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey05"
            android:text="@string/zahlenWahl"
            android:textSize="24sp" />

        <dozkaz.bib.de.myandroidlotto.MultiSelectionSpinner
            android:id="@+id/mySpinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@color/grey05"
            android:text="@string/tvGenerieren"
            android:textSize="24dp" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/etGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:maxLength="6" />

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey05"
                android:onClick="generateClick"
                android:text="@string/btnGenerieren"
                android:textColor="@color/blue2" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:background="@color/grey05"
            android:onClick="playClick"
            android:text="@string/btnStart"
            android:textColor="@color/red"
            android:textSize="50dp" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
